# steamflip

./: .gitignore  README.md  pyproject.toml
steamflip/: __init__.py  __main__.py  analise.py  auth.py  config.py  mafile.py  main.py  main_pipeline.py  mercado.py  relatorio.py  utils.py
tests/: test_analise.py  test_auth.py  test_config.py  test_mafile.py  test_mercado.py  test_relatorio.py  test_utils.py  vetor_totp.json
