[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steamflip"
version = "0.1.0"
description = "Analisador de oportunidades de compra e revenda no mercado Steam (Dota 2, CS2, TF2) usando login autenticado via pysteamauth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Patrick" }]
keywords = ["steam", "market", "dota2", "cs2", "tf2", "trading", "flipping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "openpyxl>=3.1",
    "pysteamauth>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "responses>=0.25", "pytest-asyncio>=0.23"]

[project.scripts]
steamflip = "steamflip.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["steamflip*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
